--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         クールシェア宝塚2025<br />
         スタンプラリーカード
       </h1>
-      <h4>個人情報の取り扱いについて
-        <h5 class="information">本イベントでは、<br>LINE認証で取得したユーザーIDのみを使用します。<br>ユーザーIDは、イベントのログインのために利用され、<br>その他の情報<br>（表示名・プロフィール画像・ステータスメッセージ）<br>は一切使用しません。<br></h5>
-        
-        <h5 class="information">アンケートにてご提供いただいたすべての個人情報は、<br>本イベント及び、景品当選時にのみ使用します。<br>第三者に提供されることはありません。</h5></h4>
+      <h3 class="line"> LINEでユーザー登録をしよう！！</h3>
+      <h4><a href="https://liff.line.me/2007154146-Y5jGo0G3">ユーザー登録はここをタップ！</a></h4>
 
-        <h3> LINEでユーザー登録をしよう！！</h3>
-          <h4><a href="https://liff.line.me/2007154146-Y5jGo0G3">ユーザー登録はここをタップ！</a></h4>
+        <img class="user" src="./ユーザ登録方法.png">
 
-            <img class="user" src="./ユーザ登録方法.png">
+      <h3>《個人情報の取り扱いについて》
+        <h5 class="information">本イベントでは、<br>LINE認証で取得したユーザーIDのみを使用します。<br>ユーザーIDは、イベントのログインのために利用され、<br>その他の情報<br>（表示名・プロフィール画像・ステータスメッセージ）<br>は一切使用しません。</h5>
+        <h5 class="information">アンケートにてご提供いただいたすべての個人情報は、<br>本イベント及び、景品当選時にのみ使用します。<br>第三者に提供されることはありません。</h5></h3>
+
 
 
 
@@ -163,7 +163,7 @@
         display: inline-block;
       }
 
-      h3{
+      .line{
         border-style: double;
         background-color: #06C755;
         color:white;
