--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         スタンプラリーカード
       </h1>
       <h3 class="line"> LINEでユーザー登録をしよう！！</h3>
-      <h4><a href="https://liff.line.me/2007154146-Y5jGo0G3">ユーザー登録はここをタップ！</a></h4>
+      <h4><a href="https://liff.line.me/2007154146-Y5jGo0G3" target="_self">ユーザー登録はここをタップ！</a></h4>
 
         <img class="user" src="./ユーザ登録方法.png">
 
